--- a/snippets/personalisation-functions.liquid
+++ b/snippets/personalisation-functions.liquid
@@ -60,6 +60,7 @@ const changeButtonAction = (operation)=>{
       },2000)
     }
   })
+  {% comment %} cart drawer {% endcomment %}
 </script>
 
 <style>
