--- a/snippets/meganav.liquid
+++ b/snippets/meganav.liquid
@@ -47,6 +47,19 @@
         <span class="sr-only">Telephone</span>
       </a>
     </li>
+    <li class="meganav-actions__action meganav-actions__action--contact">
+      <a
+        href="/pages/rewards"
+        class="meganav-actions__link contact-link link"
+        title="Rewards"
+      >
+        <div class="meganav-actions__icon mobile-star-icon" style="font-size: 26px;">
+          <i class="fal fa-thin fa-star"></i>
+        </div>
+
+        <span class="sr-only">Rewards</span>
+      </a>
+    </li>
 
     {%- if shop.customer_accounts_enabled -%}
       <li class="meganav-actions__action meganav-actions__action--account">
@@ -65,12 +78,6 @@
     {%- endif -%}
     {% render 'country-switcher', class: 'country-switcher-mobile', width: '40', itemType: 'country-flag' %}
   </ul>
-  {% if customer %}
-    <li class="meganav-actions__action loyalty-points-item">
-      <!-- <span>{{ customer.name }}</span> -->
-      <a href="/pages/rewards" class="data-points-div"><span data-lion-points="approved"></span><span>points</span></a>
-    </li>
-  {% endif %}
 
   <ul class="meganav-social">
     <li class="meganav-social__item">
@@ -120,15 +127,5 @@
     display:flex;
     align-items:center;
     justify-content:center;
-  }
-  .meganav-actions__action.loyalty-points-item{
-    margin-right: 0;
-    list-style: none;
-    width: fit-content;
-  }
-  @media only screen and (min-width: 980px){
-    .meganav-actions__action.loyalty-points-item{
-      display: none;
-    }
   }
 </style>
