--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,8 +1,9 @@
 <script>
-  {% if product.handle contains "swap-protect" or product.handle contains "personalisation-charge"  %}
+  {% if product.handle contains "swap-protect" %}
     location.href = "/"
   {% endif %}
 </script>
+
 {% assign add_to_cart = 'Add to Bag' %}
 {% assign adding_to_cart = 'Adding' %}
 {% assign added_to_cart = 'Added' %}
@@ -57,8 +58,8 @@
     {% if styledWidthProductCount > 0 %}
       {% section 'shop-the-look' %}
       <style>
-        #GoToCheckout{
-          margin-bottom: .3125rem;
+        #GoToCheckout {
+          margin-bottom: 0.3125rem;
         }
       </style>
     {% endif %}
@@ -750,8 +751,14 @@
 </style>
 
 <script>
-    const timeCount = new Date((new Date().getTime())+(30*60*1000));
-      document.querySelector(".product-details #AddToCartForm #AddToCartWrapper #AddToCart").addEventListener("click",()=>{
-      localStorage.setItem("cartTimer", JSON.stringify(timeCount));
-  })
+  const timeCount = new Date(new Date().getTime() + 30 * 60 * 1000);
+  document
+    .querySelector('.product-details #AddToCartForm #AddToCartWrapper #AddToCart')
+    .addEventListener('click', () => {
+      localStorage.setItem('cartTimer', JSON.stringify(timeCount));
+    });
 </script>
+
+{% if product.metafields.custom.personalization.value == true %}
+  {% section 'personalization-modal-section' %}
+{% endif %}
